Bug 144752 - fails to honor umask when creating directories
Summary: fails to honor umask when creating directories
Status: RESOLVED FIXED
Alias: None
Product: kaudiocreator
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Gerd Fleischer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-04-27 16:23 UTC by Olivier Vitrat
Modified: 2007-09-11 15:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Vitrat 2007-04-27 16:23:49 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    Debian testing/unstable Packages

Reported in Debian BTS at http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=420830

I use set GID (g+s) in my music library to share files. All users have a
login umask of 002 (g+w) yet kaudiocreator constantly creates directories
022 (g-w), i.e. no group write.
Comment 1 Richard Lärkäng 2007-09-11 15:14:06 UTC
SVN commit 711111 by larkang:

Allow creating group writable directories if umask permits it

BUG: 144752


 M  +1 -1      encoder.cpp  


--- branches/KDE/3.5/kdemultimedia/kaudiocreator/encoder.cpp #711110:711111
@@ -187,7 +187,7 @@
 	
 	int lastSlash = desiredFile.findRev('/',-1);
 	if ( lastSlash == -1 ||
-			!(KStandardDirs::makeDir( desiredFile.mid(0,lastSlash))) ) {
+			!(KStandardDirs::makeDir( desiredFile.mid(0,lastSlash), 0775)) ) {
 		KMessageBox::sorry(0, i18n("Cannot place file, unable to make directories."), i18n("Encoding Failed"));
 		emit jobsChanged();
 		updateProgress(job->id, -1);