Allow creating group writable directories if umask permits it

BUG: 144752

svn path=/branches/KDE/3.5/kdemultimedia/kaudiocreator/; revision=711111